<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dbfragments.ImportDataFragment"
        android:id="@+id/import_layout_main">

    <ToggleButton
            android:textOn="@string/start_bluetooth_scan"
            android:textOff="@string/stop_bluetooth_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/import_button_scan_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/imported_data"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/import_text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" />

    <TextView
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:id="@+id/import_text_info"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/import_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" />
</androidx.constraintlayout.widget.ConstraintLayout>